--- a/Modify index-garmin.html
+++ b/Modify index-garmin.html
@@ -53,7 +53,9 @@
     <header>
       <img src="assets/garmin-wordmark.png" alt="Garmin Logo">
     </header>
-
+<img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Garmin_logo_2006.svg" 
+     alt="Garmin Logo" 
+     style="height:60px; margin-bottom:12px;">
     <h1>PulseMind™ Demo <span class="badge">Garmin Preview</span></h1>
     <p class="small">Concept demo with simplified logic. No proprietary model weights or production logic included.</p>
 
