--- a/index-garmin.html
+++ b/index-garmin.html
@@ -51,7 +51,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="assets/garmin-wordmark.png" alt="Garmin Logo">
+      <img src="assets/garmin-logo.png" alt="Garmin Logo" style="height:60px; margin-bottom:10px;">
     </header>
 
     <h1>PulseMind™ Demo <span class="badge">Garmin Preview</span></h1>
