--- a/index-garmin.html
+++ b/index-garmin.html
@@ -56,7 +56,18 @@
 
     <h1>PulseMind™ Demo <span class="badge">Garmin Preview</span></h1>
     <p class="small">Concept demo with simplified logic. No proprietary model weights or production logic included.</p>
-
+    <p style="font-size:12px;color:var(--muted);margin:6px 0 12px" role="note" aria-label="data source attribution">
+  Data source:
+  <a href="https://connect.garmin.com/" target="_blank" rel="noopener noreferrer"
+     style="color:#007CC3;text-decoration:none;font-weight:600;">
+    Garmin Connect
+  </a>
+  • Analysis by
+  <a href="https://fuegoblade.com" target="_blank" rel="noopener noreferrer"
+     style="color:#BF00FF;text-decoration:none;font-weight:600;">
+    PulseMind™
+  </a>
+</p>
     <div class="card">
       <div class="row">
         <div>
